Bug 138778 - After renaming sheet with Alt-click, clicking away loses the new name
Summary: After renaming sheet with Alt-click, clicking away loses the new name
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sheet-Tabs-Bar
  Show dependency treegraph
 
Reported: 2020-12-09 14:29 UTC by Buovjaga
Modified: 2020-12-10 13:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2020-12-09 14:29:02 UTC
1. Open Calc
2. Alt-click the sheet name and type something
3. Click somewhere to lose focus

First reported by Seth against Windows: https://gerrit.libreoffice.org/c/help/+/107380/4#message-bd9997209316b7995646bdbd5c00230d1cd3b3a1

Hitting Enter commits the new name.

It still works with kf5, though.

Bibisected with linux-64-7.1 to
https://git.libreoffice.org/core/commit/34e69d4b9570c11c9ff04711005c7b70faadfff1
weld TabBarEdit

Adding Cc: to Caolán McNamara
Comment 1 Commit Notification 2020-12-09 19:24:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5454d9fc5ed40ed43a8b961b5cb39571ab9df584

tdf#138778 add has_child_focus which considers a related popup a 'child'

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2020-12-09 19:34:20 UTC
fixed in master, backport to 7-1 in gerrit
Comment 3 Commit Notification 2020-12-09 20:24:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/b6c2c72ceeab757fb33f2412afd291c3b21fe2ba

tdf#138778 add has_child_focus which considers a related popup a 'child'

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2020-12-10 13:31:04 UTC
Beautiful, thanks

Arch Linux 64-bit
Version: 7.2.0.0.alpha0+
Build ID: 2cccdfbb618004b7a122259707cbff3daf31db3f
CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 10 December 2020