tdf#138778 add has_child_focus which considers a related popup a 'child'

Change-Id: Iab23e399f2650ece702fb1f62d1387acca472b42