vcl/source/app/salvtables.cxx
@@ -271,6 +271,11 @@ bool SalInstanceWidget::has_focus() const { return m_xWidget->HasFocus(); }
 
 bool SalInstanceWidget::is_active() const { return m_xWidget->IsActive(); }
 
+bool SalInstanceWidget::has_child_focus() const
+{
+    return m_xWidget->HasChildPathFocus(true);
+}
+
 void SalInstanceWidget::set_has_default(bool has_default)
 {
     m_xWidget->set_property("has-default", OUString::boolean(has_default));
